# aceleracao-backend

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml
app/: documents.py  events.py  main.py  models.py  schema.py  settings.py  types.py
app/routers/: playground.py
app/templates/: playground.html
app/tests/: conftest.py  factories.py
app/tests/twitter_example/: test_mutation_twitter_message_create.py  test_mutation_twitter_message_delete.py  test_mutation_twitter_message_update.py  test_query_twitter_message.py  test_query_twitter_messages.py
app/tests/user_example/: test_query_user.py  test_query_users.py
app/twitter_example/: mutations.py  queries.py  types.py  validators.py
app/user_example/: mutations.py  queries.py  types.py  validators.py
tests/: conftest.py  factories.py
tests/twitter_example/: test_mutation_twitter_message_create.py  test_mutation_twitter_message_delete.py  test_mutation_twitter_message_update.py  test_query_twitter_message.py  test_query_twitter_messages.py
tests/user_example/: test_mutation_create_user.py  test_mutation_delete_user.py  test_mutation_update_user.py  test_query_user.py  test_query_users.py
