[tool.poetry]
name = "aceleracao-dio-backend"
version = "0.1.0"
description = "Aceleração DIO Backend"
authors = ["Developers <developers@koper.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
graphene = "^2.1.9"
SQLAlchemy = "^1.4.25"
mongoengine = "^0.23.1"
graphene-sqlalchemy = "^2.3.0"
Jinja2 = "^3.0.1"
pendulum = "^2.1.2"
graphene-mongo = "^0.2.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
