[tool.poetry]
name = "aceleracao-dio-backend"
version = "0.1.0"
description = "Aceleração DIO Backend"
authors = ["Developers <developers@koper.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
graphene = "^2.1.9"
SQLAlchemy = "^1.4.36"
mongoengine = "^0.23.1"
graphene-sqlalchemy = "^2.3.0"
Jinja2 = "^3.0.2"
pendulum = "^2.1.2"
graphene-mongo = "^0.2.13"
psycopg2 = "^2.9.1"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120

[tool.black]
line-length = 120